# mmlb

./: .gitignore  Makefile  README.md  pyproject.toml
java/: pom.xml
java/mmlb-spark-base/: pom.xml
java/mmlb-spark-base/src/main/java/org/mmlb/benchmark/: BenchmarkConfig.java  BenchmarkResult.java  SparkBenchmarkBase.java
java/mmlb-spark-iceberg/: pom.xml
java/mmlb-spark-iceberg/src/main/java/org/mmlb/benchmark/iceberg/: FileIOCatalog.java  FileIOTableOperations.java  IcebergBenchmark.java  IcebergBenchmarkRunner.java
java/mmlb-spark-lance/: pom.xml
java/mmlb-spark-lance/src/main/java/org/mmlb/benchmark/lance/: LanceBenchmark.java  LanceBenchmarkRunner.java
scripts/: ec2-setup.sh  run-all-benchmarks.sh  run-full-benchmark.sh
src/mmlb/: __init__.py  cli.py
